test/Harper/Tests/Bad/ExcessFieldsInValueConstructor.har
value List a = {
  variant Empty = { };
  
  variant NonEmpty = {
    data = {
      head :: a;
      tail :: List a;
    }
  };
};

cons :: a -> List a -> List a;
cons x xs = val NonEmpty { head = x, tail = xs };

empty :: List a;
empty = val Empty {};

main :: List Integer;
main = {
  (list :: List Integer) = val Empty { head = 5 };
  return list;
};